# Dinossauro-Google

./: .gitignore  Alocacoes.h  Atualizar.h  CMakeLists.txt  Colisao.h  DNAs.h  Desenhar.h  FuncoesAuxiliares.h  GeradorObstaculos.h  Inicializar.h  InputsRedeNeural.h  Makefile  Missing.h  Movimentar.h  README.md  Sprites.h  Tipos.h  Variaveis.h  main.cpp  package.xml  redeNeural.c
cmake/sdl2/: FindSDL2.cmake
include/google_dino_ai/: Alocacoes.h  Atualizar.h  DNAs.h  Definicoes.h  Desenhar.h  FuncoesAuxiliares.h  GeradorObstaculos.h  Inicializar.h  Sprites.h
src/: main.cpp  redeNeural.c
