<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>google_dino_ai</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <author>João Victor Dias</author>
  <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>pig</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
